--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -53,44 +53,24 @@ jobs:
           username: ${{ secrets.FORGEJO_USER01 }}
           password: ${{ secrets.FORGEJO_USER01_PAT }}
 
-      - name: Build and push by digest
+      - name: Build and Push
         id: build
         uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:${{ env.GIT_SUBDIR }}"
           platforms: linux/${{ matrix.platform }}
           file: Dockerfile
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          push: true
           cache-from: type=gha,scope=build-${{ matrix.platform }}
           cache-to: type=gha,mode=max,scope=build-${{ matrix.platform }}
-          provenance: false
-
-      - name: Export digest
-        run: |
-          mkdir -p /tmp/digests
-          digest=${{ steps.build.outputs.digest }}
-          touch "/tmp/digests/${digest#sha256:}"
-
-      - name: Upload digests
-        uses: actions/upload-artifact@v4
-        with:
-          name: digests-${{ matrix.platform }}
-          path: /tmp/digests/*
-          if-no-files-found: error
-          retention-days: 1
+          tags: |
+            "${{ env.REGISTRY_IMAGE }}:${{ vars.DUO_VERSION }}-${{ matrix.platform }}"
 
   merge:
     runs-on: self-hosted
     needs: build-image
 
     steps:
-
-      - name: Download digests
-        uses: actions/download-artifact@v4
-        with:
-          path: /tmp/digests
-          pattern: digests-*
-          merge-multiple: true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -103,7 +83,6 @@ jobs:
           password: ${{ secrets.FORGEJO_USER01_PAT }}
 
       - name: Create manifest list and push
-        working-directory: /tmp/digests
         run: |
           docker buildx imagetools create -t ${{ env.REGISTRY_IMAGE }}:${{ vars.DUO_VERSION }} \
             ${{ env.REGISTRY_IMAGE }}:${{ vars.DUO_VERSION }}-amd64 \
