--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -13,7 +13,7 @@ on:
 
 concurrency:
   group: ${{ github.workflow }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
 
@@ -37,22 +37,17 @@ jobs:
     runs-on: ${{ matrix.runner }}
     needs: debug
     if: ${{ vars.DUO_NEW_VERSION_FOUND == 'true' }}
-
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Login to forgejo
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.FORGEJO_REGISTRY01 }}
           username: ${{ secrets.FORGEJO_USER01 }}
           password: ${{ secrets.FORGEJO_USER01_PAT }}
-
       - name: Build and Push
         id: build
         uses: docker/build-push-action@v6
@@ -70,25 +65,26 @@ jobs:
   merge:
     runs-on: self-hosted
     needs: build-image
-
     steps:
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Login to forgejo
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.FORGEJO_REGISTRY01 }}
           username: ${{ secrets.FORGEJO_USER01 }}
           password: ${{ secrets.FORGEJO_USER01_PAT }}
-
       - name: Create manifest list and push
         run: |
           docker buildx imagetools create -t ${{ env.REGISTRY_IMAGE }}:${{ vars.DUO_VERSION }} \
             ${{ env.REGISTRY_IMAGE }}:${{ vars.DUO_VERSION }}-amd64 \
             ${{ env.REGISTRY_IMAGE }}:${{ vars.DUO_VERSION }}-arm64
-
       - name: Inspect image
         run: |
           docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ vars.DUO_VERSION }}
+
+  deploy:
+    needs: merge
+    uses: v6Org01/k8s/.github/workflows/reusable-deployApp.yaml
+    with:
+      APP: duoauthproxy
+      VERSION: ${{ vars.DUO_VERSION }}
+      NAMESPACE: core
