--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -66,6 +66,8 @@ jobs:
     runs-on: self-hosted
     needs: build-image
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to forgejo
         uses: docker/login-action@v3
         with:
