--- a/duoauthproxy/Dockerfile
+++ b/duoauthproxy/Dockerfile
@@ -7,6 +7,7 @@ RUN <<EOF
   microdnf update -y
   microdnf install tar wget gcc make libffi-devel perl zlib-devel diffutils -y
   ln -sf /sbin/nologin /bin/nologin
+  ln -sf /usr/share/zoneinfo/UTC /etc/localtime
   cd /tmp
   wget -O ./duoauthproxy.tgz --content-disposition https://dl.duosecurity.com/duoauthproxy-latest-src.tgz
   mkdir duoauthproxy
@@ -17,4 +18,4 @@ RUN <<EOF
   rm -rf ../duoauthproxy ../duoauthproxy.tgz
 EOF
 EXPOSE 389
-ENTRYPOINT ["/opt/duoauthproxy/bin/authproxy >> /proc/1/fd/1"]
+ENTRYPOINT ["/opt/duoauthproxy/bin/authproxy"]
