Added PAT to .github/workflows/duoauthproxy_build_docker_image.yaml

--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -93,3 +93,5 @@ jobs:
       APP: duoauthproxy
       VERSION: ${{ vars.DUO_VERSION }}
       NAMESPACE: core
+    secrets:
+      PAT: ${{ secrets.PAT }}
