--- a/.github/workflows/duoauthproxy_check_for_new_version.yaml
+++ b/.github/workflows/duoauthproxy_check_for_new_version.yaml
@@ -13,15 +13,12 @@ jobs:
   check-version:
     runs-on:
       - self-hosted
-      - X64
     steps:
-      - name: find latest available version and update secrets
+      - name: Update secrets
         run: |
-          latest_version=$(curl -s -I -L "https://dl.duosecurity.com/duoauthproxy-latest-src.tgz" | grep -i "content-disposition" | awk -F'filename="' '{print $2}' | awk -F'"' '{print $1}' | awk -F'-' '{print $2}')
-
-          if [ "$latest_version" != "${{ vars.DUO_VERSION }}" ]; then
-            echo "New version found: $latest_version"
-
+          APP_VERSION=$(curl -s -I -L "https://dl.duosecurity.com/duoauthproxy-latest-src.tgz" | grep -i "content-disposition" | awk -F'filename="' '{print $2}' | awk -F'"' '{print $1}' | awk -F'-' '{print $2}')
+          if [ "$APP_VERSION" != "${{ vars.DUO_VERSION }}" ]; then
+            echo "New version found: $APP_VERSION"
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
@@ -29,18 +26,15 @@ jobs:
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -d "{\"name\":\"DUO_NEW_VERSION_FOUND\",\"value\":\"true\"}" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND
-              
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
               -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              -d "{\"name\":\"DUO_VERSION\",\"value\":\"$latest_version\"}" \
+              -d "{\"name\":\"DUO_VERSION\",\"value\":\"$APP_VERSION\"}" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_VERSION
-              
           else
             echo "No new version found."
-            
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
