--- a/haproxy/DockerfileVersion
+++ b/haproxy/DockerfileVersion
@@ -1,18 +1,11 @@
 FROM alpine:latest
 LABEL maintainer="dev_lau11@a.jlv6.com"
 LABEL os="alpine"
-RUN apk --update -t add --no-cache haproxy curl libcap iproute2 tzdata && \
-    rm -f /var/cache/apk/* /tmp/* && \
-    rm -f /sbin/halt /sbin/poweroff /sbin/reboot
-COPY ./haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
 RUN <<EOF
-  addgroup -S haproxy && adduser -S -s /sbin/nologin -G haproxy haproxy
-  chown haproxy:haproxy /usr/local/etc/haproxy/haproxy.cfg
-  chmod 774 /usr/local/etc/haproxy/haproxy.cfg
-  chown haproxy:haproxy /usr/sbin/haproxy
-  chmod 4774 /usr/sbin/haproxy
-  setcap 'cap_net_bind_service=+ep' /usr/sbin/haproxy
+  apk --update -t add --no-cache haproxy
+  rm -f /var/cache/apk/* /tmp/*
+  rm -f /sbin/halt /sbin/poweroff /sbin/reboot
+  HAPROXY_VERSION=$(haproxy -v | head -n 1 | awk '{print $3}')
+  echo "$HAPROXY_VERSION" > /tmp/version.txt
 EOF
-USER haproxy
-# Start HAProxy (-db = do not background)
-CMD ["/usr/sbin/haproxy", "-f", "/usr/local/etc/haproxy/haproxy.cfg", "-db"]
+CMD ["cat", "/tmp/version.txt"]
