--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -25,9 +25,10 @@ defaults
 ## haproxy
 
 frontend stats
-  bind *:70
+  bind *:6021
   mode http
   option httplog
+
   acl internal src 192.168.6.0/24
 
   stats enable
@@ -48,21 +49,15 @@ frontend healthz
     option dontlog-normal
 
 ## k8s
-  
+
 frontend k8s-api
   bind *:6443
   default_backend k8s-api
-  acl public src not 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16
-  tcp-request content reject if public
 
 backend k8s-api
   balance roundrobin
   default-server maxconn 75
   option ssl-hello-chk
-#  stick-table type ip size 1m expire 30m # Stick-table of type IP, size 1 million entries, expiration time 30 min.
-#  stick on src # Sticks sessions based on source IP address.
-#  stick match src # Matches entries in stick-table based on source IP.
-#  stick store-request src # Stores entries in stick-table based on source IP.
   server k8s-api-1 192.168.5.12:6443 check on-marked-down shutdown-sessions # mini02
   server k8s-api-2 192.168.5.13:6443 check on-marked-down shutdown-sessions # mini03
   server k8s-api-3 192.168.5.16:6443 check on-marked-down shutdown-sessions # srv01
@@ -72,18 +67,18 @@ backend k8s-api
 frontend traefik
   bind *:443
   default_backend traefik
-  acl public src not 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16
-  acl sni_haaaa00 req.ssl_sni -i haaaa00.jlv6.com # homeassistant
-  acl sni_jeeeee60 req.ssl_sni -i jeeeee60.jlv6.com # jellyfin
-  tcp-request content reject if public !sni_haaaa00 || !sni_jeeeee60
+
+  tcp-request inspect-delay 5s
+  tcp-request content accept if { req.ssl_hello_type 1 } # Wait for complete client hello (type 1); recommended for content switching.
+  tcp-request content reject # Deny clients not sending an SNI header in 5 seconds.
 
 backend traefik
   balance roundrobin
   option ssl-hello-chk
-#  stick-table type ip size 1m expire 30m
-#  stick on src
-#  stick match src
-#  stick store-request src
+  stick-table type ip size 1m expire 30m # Stick-table of type IP, size 1 million entries, expiration time 30 min.
+  stick on src # Sticks sessions based on source IP address.
+  stick match src # Matches entries in stick-table based on source IP
+  stick store-request src # Stores entries in stick-table based on source IP.
   server traefik-1 192.168.5.12:30443 check send-proxy-v2 on-marked-down shutdown-sessions # mini02
   server traefik-2 192.168.5.13:30443 check send-proxy-v2 on-marked-down shutdown-sessions # mini03
   server traefik-3 192.168.5.16:30443 check send-proxy-v2 on-marked-down shutdown-sessions # srv01
