--- a/.github/workflows/keepalived_check_for_new_version.yaml
+++ b/.github/workflows/keepalived_check_for_new_version.yaml
@@ -28,8 +28,8 @@ jobs:
           file: DockerfileVersion
           push: false
           load: true  # automatically loads the single-platform build result to docker images (for use in next step).
-          cache-from: type=gha,scope=build-${{ env.APP }}-${{ runner.arch }}
-          cache-to: type=gha,mode=max,scope=build-${{ env.APP }}-${{ runner.arch }}
+          cache-from: type=gha,scope=build-${{ env.APP }}-version-${{ runner.arch }}
+          cache-to: type=gha,mode=max,scope=build-${{ env.APP }}-version-${{ runner.arch }}
           tags: version-image:latest
       - name: Run container
         id: run-container
