Update DUO workflow to fix env passed as input to reusable wf

--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -90,7 +90,7 @@ jobs:
     needs: build-merge
     uses: v6Org01/k8s/.github/workflows/reusableDeployApp.yaml@main
     with:
-      APP: ${{ env.APP }} 
+      APP: duoauthproxy # does not accept env.
       VERSION: ${{ vars.DUO_VERSION }}
       NAMESPACE: core
     secrets:
