--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -68,6 +68,7 @@ jobs:
   build-merge:
     runs-on: self-hosted
     needs: build-image
+    if: ${{ vars.DUO_NEW_VERSION_FOUND == 'true' }}
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -88,6 +89,7 @@ jobs:
 
   deploy:
     needs: build-merge
+    if: ${{ vars.DUO_NEW_VERSION_FOUND == 'true' }}
     uses: v6Org01/k8s/.github/workflows/reusableDeployApp.yaml@main
     with:
       APP: duoauthproxy # does not accept env.
