--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -81,3 +81,21 @@ backend traefik
   server traefik-1 192.168.5.12:30443 check send-proxy-v2 on-marked-down shutdown-sessions # mini02
   server traefik-2 192.168.5.13:30443 check send-proxy-v2 on-marked-down shutdown-sessions # mini03
   server traefik-3 192.168.5.16:30443 check send-proxy-v2 on-marked-down shutdown-sessions # srv01
+
+frontend nginx-proxy
+  bind *:8443
+  default_backend nginx-proxy
+
+  tcp-request inspect-delay 5s
+  tcp-request content accept if { req.ssl_hello_type 1 } # Wait for complete client hello (type 1); recommended for content switching.
+  tcp-request content reject # Deny clients not sending an SNI header in 5 seconds.
+
+backend nginx-proxy
+  balance roundrobin
+  stick-table type ip size 1m expire 30m # Stick-table of type IP, size 1 million entries, expiration time 30 min.
+  stick on src # Sticks sessions based on source IP address.
+  stick match src # Matches entries in stick-table based on source IP
+  stick store-request src # Stores entries in stick-table based on source IP.
+  server nginx-proxy-1 192.168.5.12:30443 check send-proxy-v2 on-marked-down shutdown-sessions # mini02
+  server nginx-proxy-2 192.168.5.16:30443 check send-proxy-v2 on-marked-down shutdown-sessions # srv01
+  server nginx-proxy-3 192.168.5.19:30443 check send-proxy-v2 on-marked-down shutdown-sessions # rpi02
