--- a/.github/workflows/opentelemetry-network-build-tools_checkNewVersion.yaml
+++ b/.github/workflows/opentelemetry-network-build-tools_checkNewVersion.yaml
@@ -19,7 +19,5 @@ jobs:
         with:
           APPLICATION: OPENTELEMETRY_NETWORK_BUILD_TOOLS
           DOCKERHUB_REPO: otel/opentelemetry-network-build-tools
-          GITHUB_REPO: dockerbuild
+          GITHUB_REPO: v6Org01/dockerbuild
           GITHUB_PAT_DEFAULT: ${{ secrets.PAT_DEFAULT }}
-
-
